fix: adjust alignment of temporal epoch and graph name labels

--- a/src/renderer/components/graph-selector/GraphSelector.scss
+++ b/src/renderer/components/graph-selector/GraphSelector.scss
@@ -23,6 +23,6 @@
     }
 
     .graph-selector-graph {
-        padding-inline-start: 26px;
+        padding-inline-start: 28px;
     }
 }
